infra/gitops/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: group-2-dev
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: kbazaar-api
          image: ghcr.io/kbtg-kampus-classnest-se-java/workshop-group-2:a1f45f484f0cfea60221b637b01244cba858a1f2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
